<resources>
    <string name="app_name">Digital MR</string>
    <string name="title_activity_login">Digital MR - Login</string>
    <string name="title_activity_doctor_asistent">Doctor Asistent</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prm_activity_name">Petugas RM</string>
    <string name="title_activity_export">Ekspor dan Cetak Dokumen</string>
    <string name="prm_activity_export">Export Document</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="daftar_kunjungan">Aktivasi RME</string>
    <string name="daftar_brm_aktif">Daftar BRM Aktif</string>
    <string name="title_polibaru">Blanko Poli Baru</string>
    <string name="export_brm">Export BRM</string>
    <string name="daftar_blanko">Daftar Blanko</string>
    <string name="daftar_brm">Daftar Semua BRM</string>
    <string name="riwayat_brm">Riwayat BRM</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="logout">Logout</string>
    <string name="jenis_brm">Jenis BRM</string>
    <string name="title_activity_field_selector">FieldSelectorActivity</string>

    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto Test</item>
    </string-array>
</resources>
