<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:titleTextColor="#FFF"
            android:background="@color/colorPrimary"
            app:title="@string/title_activity_login"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/appbar1"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="25dp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/imageView2" />

                    <TextView
                        android:layout_width="226dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/imageView2"
                        android:gravity="center_vertical"
                        android:text="Digital \nMedical Record"
                        android:layout_marginLeft="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#AFEEEE"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            app:backgroundTint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="5"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            app:backgroundTint="@color/colorPrimary" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/action_sign_in"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtVer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="App Version "
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>